# og

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: on-stop.sh  pre-compact.sh  session-start.sh
docs/: BACKLOG.md
og/: __init__.py  __main__.py
og/channels/: base.py  cli.py
og/cli/: __init__.py  hooks.py  transcript.py
og/config/: schema.py
og/core/: agent.py  budget.py  context.py  pg_budget.py  tools.py
og/knowledge/: __init__.py  extractor.py  graph.py  hooks.py
og/mcp/: __init__.py  server.py
og/memory/: __init__.py  embeddings.py  manager.py  pg.py
og/session/: __init__.py  pg.py  store.py
og/skills/: loader.py
prompts/: AGENTS.md  SOUL.md  TOOLS.md
scripts/: install-mcp.py  prime-contexts.sh  setup-db.py
skills/commit/: SKILL.md
skills/debug/: SKILL.md
skills/list-skills/: SKILL.md
skills/research/: SKILL.md
